--- a/app/globals.css
+++ b/app/globals.css
@@ -16,18 +16,42 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+ul {
+  list-style-type: disc;
+  padding-left: 30px;
+}
+.detail-header {
+ @apply text-[24px] leading-[28.8px] text-[#25324B] font-poppins font-black
+ 
+
+}
+.detail-left-page{
+ @apply flex flex-col gap-[16px]
+}
+.detail-topic-sub-description {
+  @apply flex flex-col gap-2 text-base text-[#25324B] font-normal leading-7 
+}
+.border-for-all{
+  @apply  border-[#D6DDEB] border-solid border-b-[1px] w-[293.5px]
+}
+
+.bg-required-lists{
+  @apply bg-[#F8F8FD] py-[4px] px-[12px]
+}
+.about-elements-style{
+  @apply flex flex-row justify-center items-center p-2.5 border-[1px] border-[#D6DDEB] rounded-[50px]
+}
+.ideal-candidate-span{
+  @apply text-[#25324B] text-base font-normal
+}
+.about-darkened{
+  @apply text-black font-semibold leading-[25.6] ideal-candidate-span
+
 }
