--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,7 @@ ul {
  
 
 }
+
 .detail-left-page{
  @apply flex flex-col gap-[16px]
 }
@@ -55,3 +56,15 @@ ul {
   @apply text-black font-semibold leading-[25.6] ideal-candidate-span
 
 }
+.signin-label {
+  @apply text-[16px] font-semibold font-epilogue leading-6;
+}
+.sign-in-line{
+  @apply h-0 w-24 border-[#D6DDEB] border-t-2
+}
+.autho-sign-style{
+  @apply text-[32px] leading-[38px] font-black mx-auto
+}
+/* .sing-button{
+  @apply w-full bg- rounded-[80px] text-white px-6 py-3
+} */
